<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.arlas</groupId>
  <artifactId>arlas-server-parent</artifactId>
  <version>19.7.6-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>ARLAS server parent</name>

  <distributionManagement>
    <snapshotRepository>
      <id>io.arlas.server.parent</id>
      <url>https://maven.cloudsmith.io/gisaia/public/</url>
    </snapshotRepository>
    <repository>
      <id>io.arlas.server.parent</id>
      <url>https://maven.cloudsmith.io/gisaia/public/</url>
    </repository>
  </distributionManagement>

  <modules>
    <module>arlas-core</module>
    <module>arlas-admin</module>
    <module>arlas-rest</module>
    <module>arlas-opensearch</module>
    <module>ogc-common</module>
    <module>ogc-csw</module>
    <module>ogc-wfs</module>
    <module>arlas-server</module>
    <module>arlas-tests</module>
    <module>stac-api</module>
  </modules>

  <properties>
    <!-- PROJECT-->
    <log4j.version>2.13.2</log4j.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <skipTests>true</skipTests>
    <surefire.version>2.20.1</surefire.version>

    <!-- DEV TOOLS -->
    <cyclops.version>10.0.0-M7</cyclops.version>

    <!-- TESTS -->
    <junit.version>4.13.1</junit.version>
    <org.hamcrest.version>1.3</org.hamcrest.version>
    <io.rest-assured.version>3.3.0</io.rest-assured.version>

    <!-- REST AND DROPWIZARD-->
    <dropwizard.version>1.3.9</dropwizard.version>
    <dropwizard.swagger.version>1.3.9-1</dropwizard.swagger.version>
    <zipkin.dropwizard.version>1.3.9-1</zipkin.dropwizard.version>
    <jackson.version>2.9.8</jackson.version>
    <swaggerv3.version>2.0.10</swaggerv3.version>

    <!-- CACHE-->
    <hazelcast.version>4.2.2</hazelcast.version>
    <hazelcast.k8s.version>2.2.3</hazelcast.k8s.version>

    <!-- ELASTICSEARCH-->
    <elastic.version>7.9.2</elastic.version>
    <elastic-apm.version>1.20.0</elastic-apm.version>

    <postgresql.version>42.2.19</postgresql.version>
    <postgis-jdbc.version>2.5.0</postgis-jdbc.version>
    <!-- do not upgrade jdbi3-core to 3.19.0 because it needs java 11 to compile -->
    <jdbi3.version>3.18.1</jdbi3.version>

    <!-- GEO-->
    <geotools.version>18.0</geotools.version>
    <protobuf.version>3.4.0</protobuf.version>
    <geoapi.version>3.0.1</geoapi.version>
    <geojson.jackson.version>1.8.1</geojson.jackson.version>
    <spatial4j.version>0.7</spatial4j.version>
    <jts.version>1.18.1</jts.version>
    <h3.version>3.7.0</h3.version>

    <!-- AUTH -->
    <java-jwt.version>3.8.2</java-jwt.version>

    <!-- DOCUMENTATION GENERATION-->
    <swagger2markup.version>1.3.3</swagger2markup.version>
    <swagger2markup.plugin.version>1.3.3</swagger2markup.plugin.version>
    <swagger2markup.extension.version>1.3.3</swagger2markup.extension.version>

    <swagger.input>target/tmp/swagger.json</swagger.input>
    <swagger.output>target/generated-docs/</swagger.output>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-core</artifactId>
      <version>${jackson.version}</version>
    </dependency>

    <!-- ____________________________________________________ -->
    <!-- DEV -->
    <!-- ____________________________________________________ -->
    <dependency>
      <groupId>com.oath.cyclops</groupId>
      <artifactId>cyclops</artifactId>
      <version>${cyclops.version}</version>
    </dependency>
    <!-- ____________________________________________________ -->
    <!-- Tests -->
    <!-- ____________________________________________________ -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>

    <!-- ____________________________________________________ -->
    <!-- LOGS -->
    <!-- ____________________________________________________ -->
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>${log4j.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.20.1</version>
        <configuration>
          <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
          <skipITs>${skipTests}</skipITs>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- SUREFIRE LOCK DOWN -->
      <plugin>
        <!-- lock down surefire version -->
        <!-- avoid having to "download all the internet" on each docker build of arlas-server docker image -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${surefire.version}</version>
      </plugin>

      <!-- DOCUMENTATION GENERATION -->
      <plugin>
        <groupId>io.github.swagger2markup</groupId>
        <artifactId>swagger2markup-maven-plugin</artifactId>
        <version>${swagger2markup.plugin.version}</version>
        <dependencies>
          <dependency>
            <groupId>io.github.swagger2markup</groupId>
            <artifactId>swagger2markup-import-files-ext</artifactId>
            <version>${swagger2markup.extension.version}</version>
          </dependency>
          <dependency>
            <groupId>io.github.swagger2markup</groupId>
            <artifactId>swagger2markup</artifactId>
            <version>${swagger2markup.version}</version>
          </dependency>
        </dependencies>
        <configuration>
          <swaggerInput>${swagger.input}</swaggerInput>
          <outputDir>${swagger.output}</outputDir>
          <config>
            <swagger2markup.markupLanguage>ASCIIDOC</swagger2markup.markupLanguage>
            <swagger2markup.pathsGroupedBy>TAGS</swagger2markup.pathsGroupedBy>
            <swagger2markup.extensions.dynamicOverview.contentPath>${project.basedir}/src/docs/asciidoc/extensions/overview</swagger2markup.extensions.dynamicOverview.contentPath>
            <swagger2markup.extensions.dynamicDefinitions.contentPath>${project.basedir}/src/docs/asciidoc/extensions/definitions</swagger2markup.extensions.dynamicDefinitions.contentPath>
            <swagger2markup.extensions.dynamicPaths.contentPath>${project.basedir}/src/docs/asciidoc/extensions/paths</swagger2markup.extensions.dynamicPaths.contentPath>
            <swagger2markup.extensions.dynamicSecurity.contentPath>${project.basedir}src/docs/asciidoc/extensions/security</swagger2markup.extensions.dynamicSecurity.contentPath>
          </config>
        </configuration>
      </plugin>

      <plugin>
        <groupId>io.github.swagger2markup</groupId>
        <artifactId>swagger2markup-maven-plugin</artifactId>
        <version>${swagger2markup.plugin.version}</version>
        <dependencies>
          <dependency>
            <groupId>io.github.swagger2markup</groupId>
            <artifactId>swagger2markup-import-files-ext</artifactId>
            <version>${swagger2markup.extension.version}</version>
          </dependency>
          <dependency>
            <groupId>io.github.swagger2markup</groupId>
            <artifactId>swagger2markup</artifactId>
            <version>${swagger2markup.version}</version>
          </dependency>
        </dependencies>
        <configuration>
          <swaggerInput>${swagger.input}</swaggerInput>
          <outputDir>${swagger.output}</outputDir>
          <config>
            <swagger2markup.markupLanguage>MARKDOWN</swagger2markup.markupLanguage>
          </config>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <pluginRepositories>
    <pluginRepository>
      <id>jcenter-snapshots</id>
      <name>jcenter</name>
      <url>http://oss.jfrog.org/artifactory/oss-snapshot-local/</url>
    </pluginRepository>
    <pluginRepository>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <id>jcenter-releases</id>
      <name>jcenter</name>
      <url>https://jcenter.bintray.com</url>
    </pluginRepository>
  </pluginRepositories>

  <repositories>
    <repository>
      <id>maven2-repository.dev.java.net</id>
      <name>Java.net repository</name>
      <url>http://download.java.net/maven/2</url>
    </repository>
    <repository>
      <id>osgeo</id>
      <name>OSGeo Release Repository</name>
      <url>https://repo.osgeo.org/repository/release/</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
      <releases>
        <enabled>true</enabled>
      </releases>
    </repository>
    <repository>
      <id>jcenter</id>
      <url>https://jcenter.bintray.com</url>
    </repository>
  </repositories>
</project>